Fix header on small devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,7 +8,7 @@ main,
 footer,
 .nav-container {
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 700px;
   width: 80%;
 }
 
