--- a/styles.scss
+++ b/styles.scss
@@ -13,7 +13,7 @@
 @import 'catalogue';
 
 .nav-container {
-  height: 24px;
+  min-height: 24px;
 }
 
 .box {
